JEAP-6647 Rename role methods to operation methods in SemanticRoleRepository